# Geosubprobe

./: .gitignore  LICENSE  README.md  environment.yml  eval_subspace.py  eval_util.py  pyproject.toml  requirements.txt  run_all_layer.sh  train_depth.py  train_seg.py  train_snorm.py
configs/: depth_training.yaml  navi_correspondence.yaml  semantic_training.yaml  snorm_training.yaml
configs/backbone/: dinov3_l16.yaml
configs/dataset/: kitti.yaml  nyu_ss.yaml
configs/optimizer/: 1_epoch.yaml  20_epoch.yaml  50_epoch.yaml
configs/probe/: depth_align.yaml  depth_dpt-s.yaml  depth_dpt.yaml  depth_gsd.yaml  depth_linear.yaml  depth_mlp.yaml  semantic_dpt.yaml  semantic_linear.yaml  snorm_linear.yaml
data_processing/: README.md
evals/datasets/: Untitled.ipynb  builder.py  kitti.py  nyu_ss.py  utils.py  vkitti2.py
evals/models/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  dino.py  dinov3.py  ibot.py  mae.py  probes.py
evals/utils/: losses.py  metrics.py
